--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
               <div class="link-item">
                 <div class="link-title">XƏBƏRLƏR</div>
                 <div class="link-text">
-                  <a href="#">2022-ci ildə bankları ən çox narahat edən risk açıqlandı</a>
+                  <a href="news-1.html">2022-ci ildə bankları ən çox narahat edən risk açıqlandı</a>
                 </div>
               </div>
               <div class="link-item">
@@ -628,7 +628,7 @@
                   VERGİ
                 </div>
                 <div class="link-text">
-                  <a href="#">Vergi Məcəlləsində edilmiş dəyişikliklər...</a>
+                  <a href="news-2.html">Vergi Məcəlləsində edilmiş dəyişikliklər...</a>
                 </div>
               </div>
               <div class="link-item">
@@ -636,7 +636,7 @@
                   XƏBƏRLƏR
                 </div>
                 <div class="link-text">
-                  <a href="#">Yerli istehsalın təşviqi ilə bağlı vergi tənzimləmələri həyata keçiriləcək</a>
+                  <a href="news-3.html">Yerli istehsalın təşviqi ilə bağlı vergi tənzimləmələri həyata keçiriləcək</a>
                 </div>
               </div>
               <div class="link-item">
@@ -644,13 +644,14 @@
                   BEYNƏLXALQ MALİYYƏ HESABATLARI...
                 </div>
                 <div class="link-text">
-                  <a href="#">COVID 19: Hökumət qrantları</a>
+                  <a href="news-4.html">COVID 19: Hökumət qrantları</a>
                 </div>
               </div>
               <div class="link-item">
                 <div class="link-title">VERGİ</div>
                 <div class="link-text">
-                  <a href="#">Vergi Məcəlləsində və Nağdsız hesablaşmalar haqqında Qanun layihələri sabah birinci
+                  <a href="news-5.html">Vergi Məcəlləsində və Nağdsız hesablaşmalar haqqında Qanun layihələri sabah
+                    birinci
                     oxunuşdan keçəcək</a>
                 </div>
               </div>
