--- a/news-1.html
+++ b/news-1.html
@@ -408,7 +408,7 @@
                     <div class=" d-flex align-items-center">
                         <i class="fs-1-7 primary fas fa-home hover-cc me-5"></i>
 
-                        <p class="fs-1-9 primary hover-cc custom-before">Bloq</p>
+                        <p class="fs-1-9 primary hover-cc custom-before">Xəbərlər</p>
                     </div>
                 </div>
             </div>
@@ -416,7 +416,7 @@
         <section id="service-breadcrumb" class="white-bg">
             <div class="container pos-rel white-bg background ">
                 <div class="row background-height align-items-center">
-                    <div class="col-6   fw-600 service-title">Bloq</div>
+                    <div class="col-6   fw-600 service-title">Xəbərlər</div>
 
                 </div>
             </div>
@@ -425,191 +425,33 @@
         <section id="service-panel" class="py-5 mt-5">
             <div class="container">
                 <div class="row">
-                    <div class="col-12 col-lg-2">
-                        <div class="wrapper flex flex-column">
-                            <div class="fs-2-5 my-3">Xidmətlərimiz</div>
 
-                            <div class="nav-wrapper d-flex justify-content-between align-items-center">
-                                <p class="nav-drop-head primary  fs-1-9 hover-cc ls-2">
-                                    Vergi
-                                </p>
-                                <i class="fas fa-angle-right fs-1-9 hover-cc dropIcon"></i>
-                            </div>
-                            <div class="nav-drop-menu d-flex flex-column my-3">
-                                <a href="./services-tax-1.html" class="primary hover-cc fs-1-7 fw-600 my-3">Vergi auditi
-                                    xidmətləri</a>
-                                <a href="./services-tax-2.html" class="primary hover-cc fs-1-7 fw-600 my-3">Vergi
-                                    məsləhət
-                                    xidmətləri</a>
-                                <a href="./services-tax-3.html" class="primary hover-cc fs-1-7 fw-600 my-3">Vergi
-                                    planlaması
-                                    xidmətləri</a>
-                                <a href="./services-tax-4.html" class="primary hover-cc fs-1-7 fw-600 my-3">Vergi
-                                    sahəsində sair
-                                    xidmətlər</a>
-                            </div>
-                            <div class="nav-wrapper d-flex justify-content-between align-items-center mt-3">
-                                <p class="nav-drop-head primary fw-500 fs-1-9 hover-cc ls-2">
-                                    Muhasibatlıq
-                                </p>
-                                <i class="fas fa-angle-right fs-1-9 hover-cc dropIcon"></i>
-                            </div>
-                            <div class="nav-drop-menu d-flex flex-column my-3">
-                                <a href="./services-accountment-1.html"
-                                    class="primary hover-cc fs-1-7 fw-600 my-3">Muhasibat uçotunun
-                                    aparılması üzrə autsors
-                                    xidməti</a>
-                                <a href="./services-accountment-2.html"
-                                    class="primary hover-cc  fs-1-7 fw-600 my-3">Maliyyə uçotunun
-                                    aparılması üzrə autsors
-                                    xidmətləri</a>
-                                <a href="./services-accountment-3.html"
-                                    class="primary hover-cc fs-1-7 fw-600 my-3">Şirkət rəhbərliyinə
-                                    xərclər və gəlirlilik haqqında
-                                    hesabatların hazırlanması</a>
-                            </div>
-                            <div class="nav-wrapper d-flex justify-content-between align-items-center">
-                                <p class="nav-drop-head primary fw-500 fs-1-9 hover-cc ls-2">
-                                    Gömrük Xidmətləri
-                                </p>
-                                <i class="fas fa-angle-right fs-1-9 hover-cc dropIcon"></i>
-                            </div>
-                            <div class="nav-drop-menu my-2">
-                                <a href="./foreign-custom.html" class="primary hover-cc fs-1-7 fw-600 my-3">Xarici
-                                    ticarət və
-                                    gömrük xidmətləri</a>
-                            </div>
-
-
-                            <div class="nav-wrapper d-flex justify-content-between align-items-center">
-                                <p class="nav-drop-head primary  fs-1-9 hover-cc ls-2">
-                                    Audit Xidmətləri
-                                </p>
-                                <i class="fas fa-angle-right fs-1-9 hover-cc dropIcon"></i>
-                            </div>
-                            <div class="nav-drop-menu d-flex flex-column my-3">
-                                <a href="./audit-1.html" class="primary hover-cc fs-1-7 fw-600 my-3">Vergi
-                                    hesabatlarının
-                                    auditi</a>
-                                <a href="./audit-2.html" class="primary hover-cc fs-1-7 fw-600 my-3">Maliyyə
-                                    hesabatlarının
-                                    auditi</a>
-                                <a href="./audit-3.html" class="primary hover-cc fs-1-7 fw-600 my-3">Əmlakın
-                                    qiymətləndirilməsinin auditi</a>
-                                <a href="./audit-4.html" class="primary hover-cc fs-1-7 fw-600 my-3">Nizamnamə
-                                    kapitalının
-                                    formalaşdırılmasın auditi</a>
-                            </div>
-
-                            <div class="nav-wrapper d-flex justify-content-between align-items-center">
-                                <p class="nav-drop-head primary  fs-1-9 hover-cc ls-2">
-                                    <a href="./services-advisory.html"
-                                        class="primary hover-cc fs-1-9  my-3">Məsləhət</a>
-                                </p>
-                            </div>
-
-                        </div>
-                    </div>
-                    <div class="col-12 col-lg-10">
+                    <div class="col-12 col-lg-12">
                         <div class="service-card-container d-flex flex-wrap">
                             <div class="main-card">
                                 <!-- <p class="fs-2 fw-500 ls-2 primary">Bloq</p> -->
                             </div>
-
-                            <p class="fw-600 fs-3 main-title my-5">
-                                Əmək haqqı və onun ödənilməsində yaranan çətinliklər
+                            <p class="text fs-2 my-5">
+                                “2022-ci ildə bizi narahat edən ən böyük amil dünyadakı bahalaşmadır. Artıq Azərbaycanda
+                                inflyasiya göstəricisi əmanət faizlərindən yüksəkdir və belə bir vəziyyət əmanətlərin
+                                artmasını zəiflədə, hətta azalmasına səbəb ola bilər”.
                             </p>
                             <p class="text fs-2 my-5">
-                                Əmək haqqının hesablanması ölçüsündən asılı olmayaraq hər növ müəssisənin yerinə
-                                yetirdiyi yorucu işlərdən biridir. Bu, təkcə vaxt aparan bir proses deyil, həm də ən
-                                mürəkkəb proseslərdən biridir. Əsasən firmalar xərcləri azaltmaq üçün bu cür prosesləri
-                                kadrlar şöbəsinə və ya maliyyə departamentinə ayırırlar, lakin bu, adətən səmərəsizliyə
-                                səbəb olur, çünki kadrlar və ya maliyyə departamentlərinin əmək haqqının uçotu və
-                                işlənməsi sahəsində adekvat təlim və təcrübəyə malik olmaya bilər. Əmək haqqı mühasibat
-                                komandasının qarşılaşdığı ümumi çətinliklərdən bəziləri aşağıda verilmişdir:
-                            </p>
-                            <p class="fw-600 fs-2-4 main-title my-5">
-                                1. Ənənəvi əmək haqqı sistemi
-                            </p>
-                            <p class="text fs-2 my-5">
-                                Ənənəvi əmək haqqının hesablanması prosesində çoxlu kağız işləri var və bu yorucudur.
-                                İşçi məlumatları da səhvlərə və fırıldaqlara qarşılaşıla bilər və təşkilat daxilində hər
-                                cür hesabat və məlumatı paylaşmaq da çətinləşir. Bu cür məlumatların və məlumatların
-                                ehtiyat nüsxəsi də saxlanıla bilməz.
-                            </p>
-                            <p class="fw-600 fs-2-4 main-title my-5">
-
-                                2.Qanun və qaydalara əməl edilməməsi
-
-                            </p>
-                            <p class="text fs-2 my-5">
-                                Hər bir sahibkarlıq subyekti üçün ölkə qaydalarına riayət etmək çox vacibdir. Əmək haqqı
-                                sistemi ilə məşğul olan şəxslər vergi qanunlarından və hər cür işçi qaydalarından
-                                xəbərdar olmalıdırlar ki, maaş və əmək haqqını bu əsasda hesablaya bilsinlər. Onlar
-                                həmçinin qanunlara edilən dəyişikliklərlə bağlı yenilənməlidirlər. Bir səhlənkarlıq
-                                külli miqdarda cərimə və ya cərimələrlə nəticələnəcək
-                            </p>
-                            <p class="fw-600 fs-2-4 main-title my-5">
-
-                                3. Məxfilik və məxfilik məsələləri
-
-                            </p>
-                            <p class="text fs-2 my-5">
-                                Məlumatların paylaşılması təşkilatların üzləşdiyi ən ümumi problemlərdən biridir. Əmək
-                                haqqı prosesinə işçilərlə bağlı bir çox vacib məlumatlar, məsələn, bank hesabı
-                                rekvizitləri və s. sızmalarla bağlı təşkilat ciddi məxfilik siyasətini qəbul etməli və
-                                insanların bu cür məlumatlara çıxışını məhdudlaşdırmalıdır.
-                            </p>
-                            <p class="fw-600 fs-2-4 main-title my-5">
-
-                                4.Ödənişlərin gecikdirilməsi
-
-                            </p>
-                            <p class="text fs-2 my-5">
-                                Əmək haqqının işlənməsi yüksək səviyyəli dəqiqlik və səhvsiz hesablamalar tələb etdiyi
-                                üçün çox vaxt sərf edir. Bir çox firma işçilərə ödənişlərin gecikdirilməsi problemi ilə
-                                üzləşə bilər. Bu, əsasən əmək haqqının əl ilə ödənilməsi prosesi və bu cür vəzifələri
-                                yerinə yetirmək üçün təyin edilmiş qeyri-ixtisaslaşmış şəxslərlə bağlıdır. Ödənişlərin
-                                gecikdirilməsi işçilərin mənəviyyatına təsir edə bilər və bəzən onların motivasiyasını
-                                da azalda bilər.
-                            </p>
-                            <p class="fw-600 fs-2-4 main-title my-5">
-
-                                5.Maliyyə departamentinin üzərinə düşən yükün artması
-
-                            </p>
-                            <p class="text fs-2 my-5">
-                                Daha əvvəl qeyd edildiyi kimi, əksər təşkilatlarda əmək haqqı sistemləri üzrə
-                                ixtisaslaşmış ayrı əmək haqqı şöbələri və ya komandaları yoxdur. Onlar bu vəzifələri
-                                əsasən kadrlar departamentinə və ya əsas vəzifələri ilə məşğul olan maliyyə şöbəsinə
-                                həvalə edirlər. Onlara əmək haqqı prosesləri həvalə olunduqda, onlar heç bir fəaliyyəti
-                                səmərəli şəkildə həyata keçirə və ya həyata keçirə bilməyəcəklər və əsas təcrübə və ya
-                                təlimə malik olmadıqları vəzifələri yerinə yetirmək üçün təzyiq hiss edə bilərlər və
-                                buna görə də əmək haqqı prosesləri dəqiq aparılmamalıdır.
+                                Dünya ölkələrində, o cümlədən Azərbaycanda da inflyasiya yüksəlməkdədir. Yanvarda 12,5%
+                                təşkil etmiş illik inflyasiya bankların əmanət faizlərini xeyli üstələyib: “Əmanətçi
+                                banka əmanət yerləşdirərək bankdan və şərtlərdən asılı olaraq illik 7-11% civarında
+                                gəlir əldə edir, digər tərəfdən qiymətlər illik 13%-ə yaxın artıb. Bu o deməkdir ki, pul
+                                daha çox ucuzlaşdığından əmanətçilər real olaraq qazanmayıblar. Belə bir vəziyyət
+                                bankların əmanət portfellərinin artım tempinin zəifləməsi, hətta azalması ilə nəticələnə
+                                bilər. Digər tərəfdən də, əhalinin və investorların öz vəsaitlərini bank əmanətlərindən
+                                başqa sərmayə edəcəkləri alətlər yox dərəcəsindədir. Əmanət faizlərindən yüksək
+                                inflyasiyaya baxmayaraq bir çox müştərilər pulunu evdə saxlamaqdansa, bankda saxlamağa
+                                üstünlük verəcəklər. Çünki əmanət faizləri inflyasiya ilə itirilən qazancın bir
+                                hissəsini kompensasiya edir. Əmanətinə sırf gəlir kimi baxan əmanətçilərin qərarlarında
+                                isə dəyişiklik ola bilər. Növbəti aylarda qarşımızda bu kimi risklər var”.
                             </p>
 
 
-
-                            <p class="text fs-2 my-5">
-                                Şirkət bu kimi problemlərin əsas səbəbini müəyyən etmək üçün hərtərəfli araşdırma
-                                apardıqda anladı ki, şirkətin tətbiq etdiyi əməkhaqqı sistemi o qədər də səmərəli və
-                                dəqiq deyil, buna görə də işçilər ödənişlərini gec alır və edilən vergi tutulmaları da
-                                öz işinə yarayır. həm də yersiz, bu, işçinin, mənəviyyatının azalması və işçi
-                                dövriyyəsinin artması ilə nəticələndi. Şirkət daha sonra əmək haqqı prosesinin yükündən
-                                azad oluna və xərcləri azaltmağa imkan verən əmək haqqı xidmətini autsorsing etməklə
-                                problemi həll etmək qərarına gəldi. Əmək haqqı xidmətinin autsorsinqi sayəsində şirkət
-                                indi diqqətini daha keyfiyyətli mallar təqdim etmək məqsədinə yönəldə bildi.
-                            </p>
-
-                            <p class="text fs-2 my-5">
-
-                                Yuxarıdakı nümunə araşdırmasından çox aydın olur ki, əmək haqqı xidmətlərinin
-                                autsorsingi yuxarıda qeyd olunan çətinliklərlə üzləşmək üçün firmalar tərəfindən qəbul
-                                edilə bilən ən səmərəli və sərfəli strategiyadır. Əmək haqqı xidmətlərinin autsorsinqi
-                                təkcə maya dəyərini azaltmır, həm də dəqiq hesablamaları və torpağın qanun və
-                                qaydalarına uyğunluğu təmin edir.
-
-                            </p>
 
 
 
