--- a/blog-3.html
+++ b/blog-3.html
@@ -407,9 +407,9 @@
                 <div class="row">
                     <div class=" d-flex align-items-center">
                         <i class="fs-1-7 primary fas fa-home hover-cc me-5"></i>
-                        <p class="fs-1-9 primary hover-cc custom-before me-5">
+                        <!-- <p class="fs-1-9 primary hover-cc custom-before me-5">
                             Xidmətlərimiz
-                        </p>
+                        </p> -->
                         <p class="fs-1-9 primary hover-cc custom-before">Bloq</p>
                     </div>
                 </div>
